--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Waypoints in directions</title>
+    <title>SafePath</title>
     <style>
       #right-panel {
         font-family: 'Roboto','sans-serif';
@@ -30,9 +30,7 @@
       }
       #map {
         height: 100%;
-        float: left;
-        width: 70%;
-        height: 100%;
+        width: 100vw;
       }
       #right-panel {
         margin: 20px;
@@ -42,31 +40,27 @@
         float: left;
         text-align: left;
         padding-top: 0;
+        display: block;
       }
-      #directions-panel {
+      /* #directions-panel {
         margin-top: 10px;
         background-color: #FFEE77;
         padding: 10px;
         overflow: scroll;
         height: 174px;
-      }
+      } */
     </style>
   </head>
   <body>
     <div id="map"></div>
     <div id="right-panel">
     <div>
-    <b>Start:</b>
-    <select id="start">
-      <option value="Halifax, NS">Halifax, NS</option>
-      <option value="Boston, MA">Boston, MA</option>
-      <option value="New York, NY">New York, NY</option>
-      <option value="Miami, FL">Miami, FL</option>
-    </select>
+    <!-- <b>Start:</b> -->
+    
     <br>
-    <b>Waypoints:</b> <br>
-    <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br>
-    <select multiple id="waypoints">
+    <!-- <b>Waypoints:</b> <br> -->
+    <!-- <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br> -->
+    <!-- <select multiple id="waypoints">
       <option value="montreal, quebec">Montreal, QBC</option>
       <option value="toronto, ont">Toronto, ONT</option>
       <option value="chicago, il">Chicago</option>
@@ -74,17 +68,17 @@
       <option value="fargo, nd">Fargo</option>
       <option value="calgary, ab">Calgary</option>
       <option value="spokane, wa">Spokane</option>
-    </select>
+    </select> -->
     <br>
-    <b>End:</b>
-    <select id="end">
+    <!-- <b>End:</b> -->
+    <!-- <select id="end">
       <option value="Vancouver, BC">Vancouver, BC</option>
       <option value="Seattle, WA">Seattle, WA</option>
       <option value="San Francisco, CA">San Francisco, CA</option>
       <option value="Los Angeles, CA">Los Angeles, CA</option>
-    </select>
+    </select> -->
     <br>
-      <input type="submit" id="submit">
+      <!-- <input type="submit" id="submit"> -->
     </div>
     <div id="directions-panel"></div>
     </div>
@@ -100,7 +94,7 @@
         overLayHeatMap(map, heatMap);
         directionsDisplay.setMap(map);
 
-        document.getElementById('submit').addEventListener('click', function() {
+        window.addEventListener('keypress', function() {
           calculateAndDisplayRoute(directionsService, directionsDisplay, map);
         });
       }
@@ -130,22 +124,22 @@
       }
 
       function calculateAndDisplayRoute(directionsService, directionsDisplay, map) {
-        var waypts = [];
-        var checkboxArray = document.getElementById('waypoints');
-        for (var i = 0; i < checkboxArray.length; i++) {
-          if (checkboxArray.options[i].selected) {
-            waypts.push({
-              location: checkboxArray[i].value,
-              stopover: true
-            });
-          }
-        }
+        // var waypts = [];
+        // var checkboxArray = document.getElementById('waypoints');
+        // for (var i = 0; i < checkboxArray.length; i++) {
+        //   if (checkboxArray.options[i].selected) {
+        //     waypts.push({
+        //       location: checkboxArray[i].value,
+        //       stopover: true
+        //     });
+        //   }
+        // }
 
 
         var directionsRequest = {
           origin: "4106 Brooklyn Ave NE, Seattle 98105 WA",
           destination: "McMahon Hall, University of Washington, Seattle, WA",
-          waypoints: waypts,
+          // waypoints: waypts,
           provideRouteAlternatives: true,
           travelMode: google.maps.DirectionsTravelMode.DRIVING,
         };
